# leptos-i18n-with-crate

main-proj/: Cargo.toml  README.md  build.rs
main-proj/locales/: de.json  en.json
main-proj/src/: app.rs  lib.rs  main.rs
some-crate/: Cargo.toml  build.rs
some-crate/locales/de/: some_crate.json
some-crate/locales/en/: some_crate.json
some-crate/src/: lib.rs
