[package]
name = "some-crate"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = "0.8.17"
leptos_i18n = { version = "0.6.1", features = ["unified_contexts"] }

[build-dependencies]
leptos_i18n_build = "0.6"

[features]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate", "leptos_i18n_build/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_i18n/ssr",
  "leptos_i18n/axum",
  "leptos_i18n_build/ssr",
]
